<resources>
    <string name="app_name" translatable="false">FlySo</string>
    <string name="notif">Notifications</string>
    <string name="facebook_message">Message notifications</string>
    <string name="facebook_notifications">Facebook notifications</string>
    <string name="notification_sound_description">Choose a ringtone or silence: \u0020</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="notifications_settings_description">Additional settings. Choose time interval, set up sounds, LED and vibration.</string>
    <string name="interval_pref">Time interval for checking</string>
    <string name="notification_sound">Notification sound</string>
    <string name="interval_pref_description_new">Notifications checked time</string>
    <string name="notification_sound_msg">Message sound</string>
    <string name="vibrate">Vibration</string>
    <string name="led_light">LED light</string>
    <string name="nav_notifications">Notifications</string>
    <string name="menu_messages">Messages</string>
    <string name="silent">No sound</string>
    <string name="no_connection">Seems you are not connected, please check your connection!</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="share_via">Share via</string>
    <string name="copy_link">Copy link</string>
    <string name="open_with">Open with</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Close</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="gplus">Google+</string>
    <string name="hide_show">Uncheck to hide this tab</string>
    <string name="others">Others</string>
    <string name="hide_tabs">Hide Social Tabs</string>
    <string name="rotation_lock">Rotation Lock</string>
    <string name="screen_rotation_lock">Check to use screen rotation lock</string>
    <string name="exit_app">Press again to exit</string>
    <string name="permission">Please Allow Permissions Or Some App Functions Wont Work Properly</string>
    <string name="downloading">Downloading</string>
    <string name="fullscreen">StatueBar</string>
    <string name="use_fullscreen">Enable to hide status bar</string>
    <string name="browser">In-App Browser</string>
    <string name="use_browser">Open external links within the app</string>
    <string name="social_settings">Social Settings</string>
    <string name="savedate">Save Data</string>
    <string name="use_savedata">Disable images to save data</string>
    <string name="textSize">Text Size</string>
    <string name="our_play_store">Play Store</string>
    <string name="paypal_support">PayPal Support</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="paypal_support_message">Support us with PayPal donation and keep this app alive and free, buy us a cup of coffee</string>
    <string name="tabs_position">Tabs Position</string>
    <string name="facebook_savedate">Facebook Basic Mode</string>
    <string name="use_facebooksavedata">Load facebook basic mode website to save data</string>
    <string name="context_share_image">Share image</string>
    <string name="context_share_link">Share link</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="use_clear_cache">Clear cache on exit, it may take long time to open the app</string>
    <string name="proximadev" translatable="false">\u00A9 ProximaDev Team %1d</string>
    <string name="proximadevteam" translatable="false">\u00A9 ProximaDev Team</string>
    <string name="version">Version: %1s</string>
    <string name="welcome_text">Welcome to</string>
    <string name="swipe">ViewPager Swipe</string>
    <string name="use_swipe">Enable ViewPager swipe between tabs</string>
    <string name="default_player">Default Video Player</string>
    <string name="use_default_player">Use default WebView video player</string>
    <string name="download_image">Download image</string>
    <string name="bad_link">Invalid Link</string>
    <string name="fab_enable">Floating Action Button</string>
    <string name="fab_enable_summary">Show useful FAB.</string>
    <string name="fab_jump_top">Jump to Top</string>
    <string name="forget_pincode">if you forgot your pin, you can clear FlySo data from your phones application manager.</string>
    <string name="flyso_lock">Enable FlySo Lock</string>
    <string name="flyso_lock_about">Secure FlySo with a smart pincode</string>
    <string name="customize">Customize Settings</string>
    <string name="customize_settings_description">Customize and change socials themes</string>
    <string name="facebook_themes">Facebook Themes</string>
    <string name="instagram_themes">Instagram Themes</string>
    <string name="facebook_center_text">Center Texts</string>
    <string name="facebook_center_description">Make facebook text align in center</string>
    <string name="about_us">About us</string>
    <string name="from">From: </string>
    <string name="send">Send</string>
    <string name="license_title">Open Source Licenses</string>
    <string name="error">Failed to download</string>
    <string name="location">Enable Location</string>
    <string name="location_settings_description">Allow to get and access to your location</string>
    <string name="connection">No Internet Connection</string>
    <string name="cant_copy">Sorry, failed at copy link</string>
    <string name="fab_profile">Open Profile</string>
    <string name="fab_saved">Saved Items</string>
    <string name="fab_messages">Messages</string>
    <string name="ad_unit1" translatable="false">ca-app-pub-3836303927954880/6228778880</string>
    <string name="ad_unit2" translatable="false">ca-app-pub-3836303927954880/9976452203</string>
    <string name="banner1" translatable="false">ca-app-pub-3836303927954880/4006365256</string>
    <string name="new_black_word">Write a new word to block</string>
    <string name="blacklist_summary">List of words to block the notifications</string>
    <string name="exact">Exact time</string>
    <string name="exact_summary">Reduce the notification delay. Isn\'t battery friendly</string>
    <string name="vibrate_double">Double vibration</string>
    <string name="blacklist_title">Black list</string>
    <string name="remove_bookmark">Removed:</string>
    <string name="reload">Refresh page</string>
    <string name="fb_details">Profile Details</string>
    <string name="fb_details_summery">Show Facebook profile name, picture and cover on drawer header</string>
    <string name="start_url">Start URL</string>
    <string name="theme">App Theme</string>
    <string name="notab">No Tabs?</string>
    <string name="notab_text">Please select at least one social tab from the settings</string>
    <string name="swiperefresh">Swipe to refresh</string>
    <string name="use_swiperefresh">Enable swipe down to refresh the page</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="fb_page">Facebook Page</string>
    <string name="rate">Rate FlySo</string>
    <string name="help_translate">Help to translate</string>
    <string name="policy">Privacy Policy</string>
    <string name="hello">Hello</string>
    <string name="morning">Good Morning</string>
    <string name="afternoon">Good Afternoon</string>
    <string name="evening">Good Evening</string>
    <string name="night">Good Night</string>
    <string name="facebook_copy_text">Copy Text</string>
    <string name="facebook_copy_description">Enable copying text from facebook posts</string>
	
	<string name="button1_large_text" translatable="false">1</string>
    <string name="button2_large_text" translatable="false">2</string>
    <string name="button3_large_text" translatable="false">3</string>
    <string name="button4_large_text" translatable="false">4</string>
    <string name="button5_large_text" translatable="false">5</string>
    <string name="button6_large_text" translatable="false">6</string>
    <string name="button7_large_text" translatable="false">7</string>
    <string name="button8_large_text" translatable="false">8</string>
    <string name="button9_large_text" translatable="false">9</string>
    <string name="button11_large_text" translatable="false">0</string>

    <string name="pin_code_forgot_text">Forgot?</string>
    <string name="pin_code_step_disable">Disable digit Pincode</string>
    <string name="pin_code_step_create">Create a digit Pincode</string>
    <string name="pin_code_step_change">Enter your current digit Pincode</string>
    <string name="pin_code_step_unlock">Enter your digit Pincode</string>
    <string name="pin_code_step_enable_confirm">Confirm your digit Pincode</string>

    <string name="pin_code_fingerprint_text">Fingerprint</string>
    <string name="pin_code_fingerprint_success">Fingerprint recognized</string>
    <string name="pin_code_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fav_theme">Select your favorite theme</string>
</resources>
