<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/hide_tabs">
        <CheckBoxPreference
            android:icon="@drawable/ic_facebook"
            android:key="Facebook"
            android:title="@string/facebook"
            android:summary="@string/hide_show"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:icon="@drawable/ic_instagram"
            android:key="Instagram"
            android:title="@string/instagram"
            android:summary="@string/hide_show"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:icon="@drawable/ic_twitter"
            android:key="Twitter"
            android:title="@string/twitter"
            android:summary="@string/hide_show"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/social_settings">
        <SwitchPreference
            android:key="location"
            android:title="@string/location"
            android:icon="@drawable/ic_location"
            android:summary="@string/location_settings_description"
            android:defaultValue="false"/>

        <Preference
            android:key="customize_settings"
            android:title="@string/customize"
            android:icon="@drawable/ic_themes"
            android:summary="@string/customize_settings_description"/>

        <SwitchPreference
            android:key="notif"
            android:title="@string/notif"
            android:icon="@drawable/ic_notifications_active"
            android:defaultValue="false"/>

        <Preference
            android:dependency="notif"
            android:key="notifications_settings"
            android:title="@string/notifications_settings"
            android:icon="@drawable/ic_settings"
            android:summary="@string/notifications_settings_description"/>

        <SwitchPreference
            android:key="SaveData"
            android:title="@string/savedate"
            android:icon="@drawable/ic_data"
            android:summary="@string/use_savedata"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="ClearCache"
            android:title="@string/clear_cache"
            android:icon="@drawable/ic_delete"
            android:summary="@string/use_clear_cache"
            android:defaultValue="false" />

        <ListPreference
            android:key="TextSize"
            android:defaultValue="100"
            android:title="@string/textSize"
            android:icon="@drawable/ic_text"
            android:summary="%s"
            android:entries="@array/textSizeList"
            android:entryValues="@array/textSizeListValues" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/others" >

        <SwitchPreference
            android:key="FlysoLocker"
            android:title="@string/flyso_lock"
            android:icon="@drawable/ic_lock"
            android:summary="@string/flyso_lock_about"
            android:defaultValue="false"/>

        <ListPreference
            android:key="TabsPosition"
            android:defaultValue="Bottom"
            android:title="@string/tabs_position"
            android:icon="@drawable/ic_tab"
            android:summary="%s"
            android:entries="@array/tapPositionList"
            android:entryValues="@array/tapPositionListValues" />

        <Preference
            android:key="FlySoThemeColor"
            android:title="@string/theme"
            android:icon="@drawable/ic_themes"
            android:summary="@string/fav_theme" />

        <SwitchPreference
            android:key="Swipe"
            android:title="@string/swipe"
            android:icon="@drawable/ic_swipe"
            android:summary="@string/use_swipe"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="SwipeToRefresh"
            android:title="@string/swiperefresh"
            android:icon="@drawable/ic_swipe_refresh"
            android:summary="@string/use_swiperefresh"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="RotationLock"
            android:title="@string/rotation_lock"
            android:icon="@drawable/ic_rotation_lock"
            android:summary="@string/screen_rotation_lock"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="FullScreen"
            android:title="@string/fullscreen"
            android:icon="@drawable/ic_fullscreen"
            android:summary="@string/use_fullscreen"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="AppBrowser"
            android:title="@string/browser"
            android:icon="@drawable/ic_web"
            android:summary="@string/use_browser"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_us">

        <Preference
            android:title="@string/our_play_store"
            android:icon="@drawable/ic_google_play">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/dev?id=6002093717124717681"/>
        </Preference>

        <Preference
            android:title="@string/fb_page"
            android:icon="@drawable/ic_fb">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://m.facebook.com/proximadev"/>
        </Preference>

        <Preference
            android:title="@string/rate"
            android:icon="@drawable/ic_star">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.proximadev.flyso"/>
        </Preference>

        <Preference
            android:title="@string/send_feedback"
            android:key="sendfeedback"
            android:icon="@drawable/ic_feedback"/>

        <Preference
            android:title="@string/help_translate" android:icon="@drawable/ic_translate">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/ProximaDev/FlySo"/>
        </Preference>

        <Preference
            android:title="@string/license_title"
            android:key="licenses"
            android:icon="@drawable/ic_license"/>

        <Preference android:title="@string/policy"
            android:icon="@drawable/ic_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://proximadev.github.io/policy.html"/>
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
