<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/proximadevteam">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/send_feedback" />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_fb"
                android:title="@string/fb_page" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_paypal"
                android:title="@string/paypal_support" />
            <item
                android:id="@+id/nav_playstore"
                android:icon="@drawable/ic_google_play"
                android:title="@string/our_play_store" />
            <item
                android:id="@+id/nav_close"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>
