<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:icon="@drawable/ic_time"
        android:title="@string/interval_pref"
        android:summary="@string/interval_pref_description_new"
        android:key="notif_interval"
        android:entries="@array/intervalPrefTitles"
        android:entryValues="@array/intervalPrefValues"
        android:defaultValue="1800000" />
    <Preference
        android:icon="@drawable/ic_block"
        android:key="BlackList"
        android:title="@string/blacklist_title"
        android:summary="@string/blacklist_summary"/>
    <SwitchPreference
        android:icon="@drawable/ic_notifications_active"
        android:key="notif_exact"
        android:title="@string/exact"
        android:summary="@string/exact_summary"
        android:defaultValue="false"/>
    <PreferenceCategory
        android:title="@string/nav_notifications">
        <SwitchPreference
            android:icon="@drawable/ic_facebook"
            android:key="facebook_notifications"
            android:title="@string/facebook_notifications"
            android:defaultValue="false"/>
        <RingtonePreference
            android:icon="@drawable/ic_volume"
            android:key="ringtone"
            android:dependency="facebook_notifications"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:defaultValue="content://settings/system/notification_sound"
            android:title="@string/notification_sound"
            android:summary="@string/notification_sound_description" />
        <SwitchPreference
            android:icon="@drawable/ic_vibration"
            android:key="vibrate_notif"
            android:dependency="facebook_notifications"
            android:title="@string/vibrate"
            android:summary="@string/facebook_notifications"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_vibration"
            android:key="vibrate_double_notif"
            android:dependency="vibrate_notif"
            android:title="@string/vibrate_double"
            android:summary="@string/facebook_notifications"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_light"
            android:key="led_notif"
            android:dependency="facebook_notifications"
            android:title="@string/led_light"
            android:summary="@string/facebook_notifications"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/menu_messages">
        <SwitchPreference
            android:icon="@drawable/ic_messages"
            android:key="facebook_messages"
            android:title="@string/facebook_message"
            android:defaultValue="false"/>
        <RingtonePreference
            android:icon="@drawable/ic_volume"
            android:key="ringtone_msg"
            android:dependency="facebook_messages"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:defaultValue="content://settings/system/notification_sound"
            android:title="@string/notification_sound_msg"
            android:summary="@string/notification_sound_description" />
        <SwitchPreference
            android:icon="@drawable/ic_vibration"
            android:key="vibrate_msg"
            android:dependency="facebook_messages"
            android:title="@string/vibrate"
            android:summary="@string/facebook_message"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_vibration"
            android:key="vibrate_double_msg"
            android:dependency="vibrate_msg"
            android:title="@string/vibrate_double"
            android:summary="@string/facebook_message"
            android:defaultValue="false"/>
        <SwitchPreference
            android:icon="@drawable/ic_light"
            android:key="led_msj"
            android:dependency="facebook_messages"
            android:title="@string/led_light"
            android:summary="@string/facebook_message"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
