<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/copy_link"
        app:showAsAction="never"
        android:icon="@drawable/ic_copy_url"
        android:id="@+id/ic_copy" />

    <item android:title="@string/share_via"
        android:icon="@drawable/ic_share"
        app:showAsAction="never"
        android:id="@+id/ic_share" />

    <item android:title="@string/fab_jump_top"
        android:icon="@drawable/ic_fab_jump_top"
        app:showAsAction="never"
        android:id="@+id/ic_up" />

    <item android:title="@string/open_with"
        android:icon="@drawable/ic_browser"
        app:showAsAction="never"
        android:id="@+id/ic_open" />

</menu>