<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FacebookFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/FacebookWebView" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:layout_margin="16dp"
        android:visibility="gone"
        android:id="@+id/menuFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        fab:menu_colorNormal="?attr/colorPrimary"
        fab:menu_colorPressed="?attr/colorPrimaryDark"
        fab:menu_colorRipple="?attr/colorPrimary"
        fab:menu_icon="@drawable/ic_fab_menu">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/profileFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_profile"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_label="@string/fab_profile"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/savedFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bookmark"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_label="@string/fab_saved"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/messagesFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fb_messages"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_label="@string/fab_messages"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/shareFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_label="@string/context_share_link"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/topFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_jump_top"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_label="@string/fab_jump_top"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/refreshsFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            fab:fab_colorNormal="?attr/colorPrimary"
            fab:fab_colorPressed="?attr/colorPrimaryDark"
            fab:fab_colorRipple="?attr/colorPrimary"
            fab:fab_label="@string/reload"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

